[gd_scene load_steps=3 format=3 uid="uid://bb5il4njjtfdp"]

[ext_resource type="Script" path="res://UI/Menus/main_menus/Scripts/CityMenu.gd" id="1_27wi3"]
[ext_resource type="Texture2D" uid="uid://dmy58hkher42y" path="res://Art/Backgrounds/burning-city-background-x4fotgoms5dpq57b.jpg" id="2_85nhd"]

[node name="CityMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_27wi3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_85nhd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0.780392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 64
text = "Welcome to the City"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="BarButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0.780392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 12
text = "Bar"

[node name="GymButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0.780392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 12
text = "Gym"

[node name="CasinoButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0.780392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 12
text = "Casino"

[node name="HomeButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0.780392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 12
text = "Home"

[node name="LabyrinthButton" type="Button" parent="."]
layout_mode = 0
offset_left = 932.0
offset_top = 586.0
offset_right = 1130.0
offset_bottom = 635.0
text = "To Labyrinth"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/BarButton" to="." method="_on_bar_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/CasinoButton" to="." method="_on_casino_button_pressed"]
[connection signal="pressed" from="LabyrinthButton" to="." method="_on_labyrinth_button_pressed"]
